--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,9 +2,11 @@
   <head>
     <title>Jeremy Grubard</title>
     <script src='/dist/bundle.js' defer></script>
+    <meta name='viewport' content='width=device-width'>
     <link rel='stylesheet' href='/vendor/font-awesome/css/font-awesome.min.css' />
     <link rel='stylesheet' href='/vendor/bootstrap/dist/css/bootstrap.min.css' />
     <link rel='stylesheet' href='/vendor/mdbreact/dist/css/mdb.css' />
+    <link rel='stylesheet' href='/vendor/styles/main.css' />
   </head>
   <body>
     <div id='root'></div>
