--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,6 +2,13 @@
   <head>
     <title>Jeremy Grubard</title>
     <script src='/dist/bundle.js' defer></script>
+    
+    <!-- <script src="https://www.youtube.com/iframe_api"></script> -->
+    <!-- Add the whitelist plugin -->
+    <!-- <plugin name="cordova-plugin-whitelist" source="npm" spec="*"/> -->
+    <!-- White list https access to Youtube -->
+    <!-- <allow-navigation href="https://*youtube.com/*"/> -->
+    
     <meta name='viewport' content='width=device-width'>
     <link rel='stylesheet' href='/vendor/font-awesome/css/font-awesome.min.css' />
     <link rel='stylesheet' href='/vendor/bootstrap/dist/css/bootstrap.min.css' />
@@ -10,5 +17,49 @@
   </head>
   <body>
     <div id='root'></div>
+    <div id="player"></div>
+
+    <!-- <script>
+      // 2. This code loads the IFrame Player API code asynchronously.
+      var tag = document.createElement('script');
+
+      tag.src = "https://www.youtube.com/iframe_api";
+      var firstScriptTag = document.getElementsByTagName('script')[0];
+      firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+      // 3. This function creates an <iframe> (and YouTube player)
+      //    after the API code downloads.
+      var player;
+      function onYouTubeIframeAPIReady() {
+        player = new YT.Player('player', {
+          height: '390',
+          width: '640',
+          videoId: 'M7lc1UVf-VE',
+          events: {
+            'onReady': onPlayerReady,
+            'onStateChange': onPlayerStateChange
+          }
+        });
+      }
+
+      // 4. The API will call this function when the video player is ready.
+      function onPlayerReady(event) {
+        event.target.playVideo();
+      }
+
+      // 5. The API calls this function when the player's state changes.
+      //    The function indicates that when playing a video (state=1),
+      //    the player should play for six seconds and then stop.
+      var done = false;
+      function onPlayerStateChange(event) {
+        if (event.data == YT.PlayerState.PLAYING && !done) {
+          setTimeout(stopVideo, 6000);
+          done = true;
+        }
+      }
+      function stopVideo() {
+        player.stopVideo();
+      }
+    </script> -->
   </body>
 </html>
