lots of styling

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,10 @@
     <!-- White list https access to Youtube -->
     <!-- <allow-navigation href="https://*youtube.com/*"/> -->
     
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+
     <meta name='viewport' content='width=device-width'>
+    
     <link rel='stylesheet' href='/vendor/font-awesome/css/font-awesome.min.css' />
     <link rel='stylesheet' href='/vendor/bootstrap/dist/css/bootstrap.min.css' />
     <link rel='stylesheet' href='/vendor/mdbreact/dist/css/mdb.css' />
