--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,6 +4,8 @@
     <script src='/dist/bundle.js' defer></script>
     
     <meta name='viewport' content='width=device-width'>
+
+    <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
     
     <link rel='stylesheet' href='/vendor/font-awesome/css/font-awesome.min.css' />
     <link rel='stylesheet' href='/vendor/bootstrap/dist/css/bootstrap.min.css' />
